--- a/landingpage.html
+++ b/landingpage.html
@@ -163,7 +163,7 @@
     </div>
 </div> 
 </div>
- <center><p1>Developed by M Waleed and M Sameer</p1></center>
+ <center><p1>Developed by M Waleed </p1></center>
   <center><p1>All rights reserved</p1></center>
 </footer>
 </body>
