--- a/order.html
+++ b/order.html
@@ -153,7 +153,7 @@
         const jsonPayload = JSON.stringify(data);
 
         try {
-            const response = await fetch("https://formspree.io/f/mlddwpgk", {
+            const response = await fetch("https://formspree.io/f/meoaegkd", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
